fix: remove extra padding outside of the main document sheet

--- a/src/KankaJournal/KankaJournalApplication.scss
+++ b/src/KankaJournal/KankaJournalApplication.scss
@@ -1,7 +1,4 @@
 .kanka-journal {
-    height: 100%;
-    padding: 5px;
-
     .write-action {
         display: none;
     }
